# wordle

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/wordle/: dictionary.json  game.py  tw.py  ui.py
